# th-strava-sensor

./: .autorc  .copilot-instructions.md  .dockerignore  .editorconfig  .env.local.example  .envrc  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  cliff.toml  pyproject.toml  renovate.json5
.github/: copilot-instructions.md
.github/actions/setup-project/: README.md  action.yml
.github/workflows/: changelog.yml  claude-code-review.yml  claude.yml  copilot-setup-steps.yml  docker.yml  linters.yml  release.yml
scripts/: determine-bump-type.sh  run-all-checks.sh  run-localtunnel.sh
src/strava_sensor/: cli.py  last_activity_store.py  runtime_state.py  sources.py  telemetry.py  webhook_server.py
src/strava_sensor/fitfile/: fitfile.py  model.py
src/strava_sensor/mqtt/: mqtt.py
src/strava_sensor/source/: base.py  file.py  garmin.py  strava.py
src/strava_sensor/strava/: __init__.py  webhook.py
src/strava_sensor/ui/: __init__.py  status_page.py
src/strava_sensor/webhook/: __init__.py  cli.py  processor.py  server.py  subscription.py
tests/: conftest.py  test_fitfile.py  test_last_activity_store.py  test_status_page.py  test_telemetry.py  test_webhook.py
tests/fixtures/: test-1.fit
