[project]
name = "strava-sensor"
version = "0.1.0"
description = "Strava Battery Sensor for Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "distlib>=0.3.9",
    "filelock>=3.18.0",
    "platformdirs>=4.3.7",
    "pre-commit-uv>=4.1.4",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "ruff>=0.11.8",
    "yamllint>=1.37.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv"]

[tool.ruff.lint]
extend-select = [
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "ERA",    # flake8-eradicate (commented out code)
    "G",      # flake8-logging-format
    "I",      # isort
    "ISC",    # flake8-implicit-str-concat
    "PL",     # Pylint
    "RET",    # flake8-return
    "RUF100", # unused noqa
    "SLF",    # flake8-self
]
ignore = [
    "ISC001",  # single line string concat
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "PLR1711", # useless return
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "SLF001", # allow access to private members in tests
]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
deprecateTypingAliases = true
useLibraryCodeForTypes = true
include = ["src"]
exclude = [
    "__pycache__",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "node_modules",
    "venv",
]
reportUnnecessaryTypeIgnoreComment = true
venv = ".venv"
venvPath = "."
